[package]
name = "cutter"
version = "0.5.0"
authors = ["Håkon Solbjørg <hlsolbjorg@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "cutter"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
image = "0.24.2"
rust-s3 = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
