[package]
name = "cutter"
version = "0.5.0"
authors = ["Håkon Solbjørg <hlsolbjorg@gmail.com>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "cutter"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
image = "0.24.2"
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
